# entrypoint

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  README.md  SECURITY.md  codecov.yml  entrypoint.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_entrypoint.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  change.yml  config.yml  deprecation.yml  discussion.yml  feature.yml  internal.yml  security.yml
.github/workflows/: build.yml  check.yml  docs.yml  publish.yml  release.yml  test.yml  tests.yml
changelog/: index.html
changes/: 11.change.md  20.change.md  9.internal.md
code_of_conduct/: index.html
contributing/: index.html
docs/: reference.md
entrypoint/: __init__.py  core.py
reference/: index.html
search/: search_index.json
security/: index.html
tests/: module.py  module_with_entrypoint.py  test_entrypoint.py  track.py
