[tool.poetry]
name = "entrypoint"
version = "1.4.0"
description = "Decorated functions as entry points."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/entrypoint"
repository = "https://github.com/nekitdev/entrypoint"
documentation = "https://nekitdev.github.io/entrypoint"

keywords = ["python", "entrypoint", "entry"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Funding = "https://patreon.com/nekitdev"
Issues = "https://github.com/nekitdev/entrypoint/issues"

[[tool.poetry.packages]]
include = "entrypoint"

[tool.poetry.dependencies]
python = ">= 3.7"
attrs = ">= 23.1.0"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.3.0"
flake8-pyproject = "1.2.3"

[tool.poetry.group.format.dependencies.flake8]
version = "6.0.0"
python = ">= 3.8.1"

[tool.poetry.group.format.dependencies.isort]
version = "5.12.0"
python = ">= 3.8"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "1.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
typing-extensions = "4.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.3"
mkdocs-material = "9.1.14"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.21.2"
extras = ["python"]

[tool.poetry.group.dev.dependencies]
changelogging = "1.3.0"

[tool.black]
line_length = 100

[tool.flake8]
max_line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov entrypoint"
testpaths = ["tests"]

[tool.coverage.run]
source = ["entrypoint"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[tool.changelogging]
name = "entrypoint"
version = "1.4.0"
url = "https://github.com/nekitdev/entrypoint"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.5.2"]
build-backend = "poetry.core.masonry.api"
